--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -21,11 +21,11 @@
         <div class="col-sm-8">
             <div class="dropdown">
                 <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdateF" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="inscription.birthdateF = (inscription.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
                 </ul> 
             </div>
         </div>
