--- a/theme/foyers/templates/blocks/simpleContactFoyer_Etudiant.html
+++ b/theme/foyers/templates/blocks/simpleContactFoyer_Etudiant.html
@@ -6,17 +6,20 @@
       contactCtrl.contactData.template='/theme/foyers/templates/mails/reservationEDM.html';">
 
         <ng-form name="inscription_form" role="form" ng-submit="contactCtrl.submit()">
-        
-             
+        <div class="row">
+        <div class="col-sm-4"><label for="nom" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="nom" ng-model="contactCtrl.contactData.nom" name="name" required></div>
+    </div>
+<!--             
             <div>
                     <div style="margin-bottom:12px" >{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</div>
                             <!--Type de public -->
                      
               
-                      <p><a class="cursor-as-pointer" ng-click="etudiant=true; contactCtrl.showInscription =true">- Étudiant </a></p>
+                      <!--<p><a class="cursor-as-pointer" ng-click="etudiant=true; contactCtrl.showInscription =true">- Étudiant </a></p>
                       <p><a class="cursor-as-pointer" ng-click="etudiant=false; contactCtrl.showInscription =true">- Jeune Pro </a></p><!--Attention, ce label dépend du format de type de contenu-->
 
-            </div>
+            <!--</div>
             <div ng-if="contactCtrl.showInscription" >
                 <div class="container">
                         <div class="text-center">
@@ -33,9 +36,9 @@
                                                 <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                             </div>
                                     </ng-form>
-                                </div>
-                                
-                                <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==2}" ng-click="contactCtrl.setCurrentStage(1,infos_familiales.$valid)">{{rubedo.translate("Block.Inscription.InfosFamiliales", "Informations familiales")}}
+                                </div>-->
+                                -->-->
+                                <!--<h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==2}" ng-click="contactCtrl.setCurrentStage(1,infos_familiales.$valid)">{{rubedo.translate("Block.Inscription.InfosFamiliales", "Informations familiales")}}
                                         <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>2"></span>
                                 </h2>
                                 <div id="inscriptionStage2" class="collapse">
@@ -105,7 +108,7 @@
                                             <div class="row text-center">
                                                 <p ng-if="lettre_motivation.$invalid && lettre_motivation.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                             </div>
-                                    </ng-form>
+                                    </ng-form>-->
                                     
                                     <!--<div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : inscription_form.$invalid}" ng-click="contactCtrl.setCurrentStage(6,lettre_motivation.$valid)" ng-if="!processForm && !finInscription">{{rubedo.translate("Block.Inscription.Valider","Valider")}}</div>
@@ -113,6 +116,21 @@
                                         <p ng-if="finInscription">{{message}}</p>
                                     </div>-->
                                     
+<!--                                    <div class="row text-center">                          
+                                        <div class="row">
+                                                <div class="button" ng-init="confirmMsg=false;" ng-class="{rouge: inscription_form.$valid, disabled: inscription_form.$invalid, submit: inscription_form.$invalid}" ng-click="contactCtrl.submit();confirmMsg=true;">{{rubedo.translate("Block.Inscription.Valider","Valider")}}</div>
+                                        </div><br/>
+                                        <p ng-show="inscription_form.$invalid">Tu as oublié de renseigner certains champs obligatoires...</p>
+                                      
+                                        <div class="row confirm" ng-if="confirmMsg">
+                                            Réservation envoyée avec succès !<br> Ne considérez votre demande comme confirmée qu'à réception d'un mail de confirmation de notre part.
+                                        </div>
+                                    </div>-->
+                            
+                                            
+                
+<!--                                </div>-->
+                        
                                     <div class="row text-center">                          
                                         <div class="row">
                                                 <div class="button" ng-init="confirmMsg=false;" ng-class="{rouge: inscription_form.$valid, disabled: inscription_form.$invalid, submit: inscription_form.$invalid}" ng-click="contactCtrl.submit();confirmMsg=true;">{{rubedo.translate("Block.Inscription.Valider","Valider")}}</div>
@@ -123,13 +141,13 @@
                                             Réservation envoyée avec succès !<br> Ne considérez votre demande comme confirmée qu'à réception d'un mail de confirmation de notre part.
                                         </div>
                                     </div>
-                            
-                                            
-                
-                                </div>
-                        </div>   
+                        
+                        
+                        
+                        
+<!--                        </div>   
                     </div>
-                </div>    
+                </div>    -->
                                 
             </ng-form>
 </div>                        
