--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -23,6 +23,14 @@
 
 <table width=100% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
+    v
+    
     <!--else if($nbInscrits ==2)
         $messageClient .= "<tr><td bgcolor='#8CACBB' width=33%><i>" . $trad["ccn_label_personnes_inscrites"] . "</i></td><td width=67%>" .  $nomClient . "</td></tr>";
     if(isset($inscription['enfants_org'])){
