--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -21,9 +21,9 @@
 <br/>
 
 
-<table style="border: 1px solid #000000;width=100%">
-    <tr><td style="background-color:#8CACBB;width=33%"><i>Nom</i></td><td style="width:67%">{ nom }</td></tr>
-    <tr><td style="background-color:#8CACBB;width=33%"><i>Prénom</i></td><td style="width:67%">{ prenom }</td></tr>
+<table width=100% style='border: 1px solid #000000'>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr>
 <!--    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe.sexe }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%>{ birthdate }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%>{ birthplace }</td></tr>
