--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -24,12 +24,12 @@
 <table width=100% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe.sexe }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%>{ birthdate }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%>{ birthplace }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Nationalité</i></td><td width=67%>{ nationality }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Numéro de téléphone</i></td><td width=67%>{ tel }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Email</i></td><td width=67%>{ email }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Nationalité</i></td><td width=67%></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Numéro de téléphone</i></td><td width=67%></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Email</i></td><td width=67%></td></tr>
     
     <!--else if($nbInscrits ==2)
         $messageClient .= "<tr><td bgcolor='#8CACBB' width=33%><i>" . $trad["ccn_label_personnes_inscrites"] . "</i></td><td width=67%>" .  $nomClient . "</td></tr>";
