--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -16,7 +16,7 @@
 
 <table width=100% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ surname }</td></tr> 
+    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> 
 <!--    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%></td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%></td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%></td></tr>
