--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -7,67 +7,87 @@
       contactCtrl.param.joursCumul=[0,0,31,59,90,120,151,181,212,243,273,304,334,365];">
 
         <form name="edmForm" role="form" ng-submit="contactCtrl.submit()">
- 
-             <div class="row">
-                <div class="col-sm-4"><label for="nom" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="nom" ng-model="contactCtrl.contactData.nom" name="nom" required></div>
+        <div class="row">
+            <h3>Informations personnelles</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <label for="{{'name'+block.id}}" >{{rubedo.translate("Blocks.Contact.Input.Name.Label","Name*")}}</label>
+                <input type="text" ng-model="contactCtrl.contactData.nom" class="form-control" id="{{'name'+block.id}}" required>
             </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
-                <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="contactCtrl.contactData.surname" name="prenom" required></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
-                <div class="col-sm-8">
-                    <input type="radio"  name="sexe" id="H" value="H" ng-model="contactCtrl.contactData.sexe.sexe" required>
-                                <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
-                    <input type="radio"  name="sexe" id="F" value="F" ng-model="contactCtrl.contactData.sexe.sexe">
-                                <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="birthdate" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
-                <div class="col-sm-8">
-                    <div class="dropdown">
-                        <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
-                            <div class="input-group"><input readonly id="birthdate" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                            </div>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                        </ul> 
+            <!--<div class="col-sm-6">
+                <label >Prénom*</label>
+                <input type="text"  ng-model="contactCtrl.contactData.prenom" class="form-control"  required>
+            </div>-->
+        </div><br/>
+        <div class="row">
+            <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
+            <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="contactCtrl.contactData.prenom" name="prenom" required></div>
+        </div>
+        <!--<div class="row" >
+        <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
+        <div class="col-sm-8">
+            <input type="radio"  name="sexe" id="H" value="H" ng-model="contactCtrl.contactData.sexe.sexe" required>
+                        <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
+            <input type="radio"  name="sexe" id="F" value="F" ng-model="contactCtrl.contactData.sexe.sexe">
+                        <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
+        </div>
+    </div>-->
+    <div class="row" >
+        <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
+        <div class="col-sm-8">
+            <div class="dropdown">
+                <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
+                    <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                     </div>
-                </div>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                </ul> 
             </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="birthplace" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="birthplace" ng-model="contactCtrl.contactData.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="contactCtrl.contactData.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
+    </div>
+    
+    <div class="row" >
+        <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
+    </div>
+    <div class="row" >
+        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="contactCtrl.contactData.tel"  required>
+        </div>
+    </div> 
+        <div class="row">
+            <div class="col-sm-6">
+                <label >Email*</label>
+                <input type="text" ng-model="contactCtrl.contactData.email" class="form-control" required>
             </div>
             
-            <div class="row">
-                <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="contactCtrl.contactData.tel"  required>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-sm-4"><label for="email" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="email" id="email" name="email"  ng-model="contactCtrl.contactData.email" placeholder="user@mydomain.com" required></div>
-            </div>    
-            <div class="row">
-                <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
-                <div class="col-sm-8">
-                    <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="contactCtrl.contactData.email_verif" required>
-                    <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
-                </div>
-            </div>
+        </div><br/>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <label class="text-center">Préciser, en quelques mots, l'objet de votre demande *</label><br/>
+                <label class="text-center" style="font-style:italic;">Merci de préciser le type de chambre que vous désirez (individuelle, double ou familiale)</label>
+                <textarea class="form-control" ng-model="contactCtrl.contactData.message" rows="2" required></textarea>
+            </div>
+                
 
- 
+        </div><br/>
+        
+       <!-- <div class="row">
+            <div class="sm-12">
+                <div ng-if="contactCtrl.contactError" ng-init="notification = {type:'error',text:contactCtrl.contactError}">
+                        <rubedo-notification></rubedo-notification>
+                    </div>
+                    <button type="submit" class="button rouge">{{rubedo.translate("Blocks.Contact.Input.Submit.Label","Submit")}}</button>
+
+            </div>
+        </div>-->
         
         
         <div class="row">
