--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -17,7 +17,7 @@
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> 
-    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe.sexe }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%>{ birthdate }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%>{ birthplace }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Nationalité</i></td><td width=67%>{ nationality }</td></tr>
